initial/target/MiniGoParser.py
# Generated from main/minigo/parser/MiniGo.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MiniGoParser ( Parser ):

    grammarFileName = "MiniGo.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "':'", "'.'", "'_'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'nil'", "'var'", "'const'", 
                     "'type'", "'struct'", "'interface'", "'func'", "'return'", 
                     "'if'", "'else'", "'for'", "'range'", "'break'", "'continue'", 
                     "<INVALID>", "<INVALID>", "':='", "<INVALID>", "';'", 
                     "<INVALID>", "'&&'", "'||'", "'!'", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'='", "'('", "')'", "'{'", "'}'", "'['", 
                     "']'", "','", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'\n'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "INTEGER", "ATOMIC_TYPE", "COMMENT1", "COMMENT2", 
                      "KEYWORD", "VAR", "CONST", "TYPE", "STRUCT", "INTERFACE", 
                      "FUNC", "RETURN", "IF", "ELSE", "FOR", "RANGE", "BREAK", 
                      "CONTINUE", "BOOLEAN", "ASSIGN_OP", "ASSIGN_STMT_OP", 
                      "FLOAT", "SEMI", "COMPARE_OP", "AND_OP", "OR_OP", 
                      "NOT_OP", "ADD_OP", "MINUS_OP", "MUL_OP", "DIV_OP", 
                      "MOD_OP", "ASSIGN_INIT", "LPARENTHESIS", "RPARENTHESIS", 
                      "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", "SEPARATOR", 
                      "ESCAPE", "STRING", "ID", "WS", "NL", "ILLEGAL_ESCAPE", 
                      "UNCLOSE_STRING", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decl = 1
    RULE_statement = 2
    RULE_typedef = 3
    RULE_constdecl = 4
    RULE_vardecl = 5
    RULE_vardeclassign = 6
    RULE_array = 7
    RULE_array_type = 8
    RULE_array_index = 9
    RULE_array_list = 10
    RULE_array_mem = 11
    RULE_structdecl = 12
    RULE_structfielddecl = 13
    RULE_structliteral = 14
    RULE_structfieldliteral = 15
    RULE_interfacedecl = 16
    RULE_method_signature = 17
    RULE_argument = 18
    RULE_var_access = 19
    RULE_field_access = 20
    RULE_method_var_access = 21
    RULE_func_and_method_decl = 22
    RULE_method_receiver = 23
    RULE_ret = 24
    RULE_funccall = 25
    RULE_methodcall = 26
    RULE_assignment = 27
    RULE_expression = 28
    RULE_if_stmt = 29
    RULE_if_condition = 30
    RULE_block = 31
    RULE_for_loop = 32
    RULE_assignment_for = 33
    RULE_literal = 34

    ruleNames =  [ "program", "decl", "statement", "typedef", "constdecl", 
                   "vardecl", "vardeclassign", "array", "array_type", "array_index", 
                   "array_list", "array_mem", "structdecl", "structfielddecl", 
                   "structliteral", "structfieldliteral", "interfacedecl", 
                   "method_signature", "argument", "var_access", "field_access", 
                   "method_var_access", "func_and_method_decl", "method_receiver", 
                   "ret", "funccall", "methodcall", "assignment", "expression", 
                   "if_stmt", "if_condition", "block", "for_loop", "assignment_for", 
                   "literal" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    INTEGER=4
    ATOMIC_TYPE=5
    COMMENT1=6
    COMMENT2=7
    KEYWORD=8
    VAR=9
    CONST=10
    TYPE=11
    STRUCT=12
    INTERFACE=13
    FUNC=14
    RETURN=15
    IF=16
    ELSE=17
    FOR=18
    RANGE=19
    BREAK=20
    CONTINUE=21
    BOOLEAN=22
    ASSIGN_OP=23
    ASSIGN_STMT_OP=24
    FLOAT=25
    SEMI=26
    COMPARE_OP=27
    AND_OP=28
    OR_OP=29
    NOT_OP=30
    ADD_OP=31
    MINUS_OP=32
    MUL_OP=33
    DIV_OP=34
    MOD_OP=35
    ASSIGN_INIT=36
    LPARENTHESIS=37
    RPARENTHESIS=38
    LBRACE=39
    RBRACE=40
    LBRACKET=41
    RBRACKET=42
    SEPARATOR=43
    ESCAPE=44
    STRING=45
    ID=46
    WS=47
    NL=48
    ILLEGAL_ESCAPE=49
    UNCLOSE_STRING=50
    ERROR_CHAR=51

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MiniGoParser.EOF, 0)

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniGoParser.DeclContext)
            else:
                return self.getTypedRuleContext(MiniGoParser.DeclContext,i)


        def getRuleIndex(self):
            return MiniGoParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MiniGoParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 70
                self.decl()
                self.state = 73 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MiniGoParser.VAR) | (1 << MiniGoParser.CONST) | (1 << MiniGoParser.TYPE) | (1 << MiniGoParser.FUNC))) != 0)):
                    break

            self.state = 75
            self.match(MiniGoParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMI(self):
            return self.getToken(MiniGoParser.SEMI, 0)

        def constdecl(self):
            return self.getTypedRuleContext(MiniGoParser.ConstdeclContext,0)


        def vardecl(self):
            return self.getTypedRuleContext(MiniGoParser.VardeclContext,0)


        def vardeclassign(self):
            return self.getTypedRuleContext(MiniGoParser.VardeclassignContext,0)


        def structdecl(self):
            return self.getTypedRuleContext(MiniGoParser.StructdeclContext,0)


        def interfacedecl(self):
            return self.getTypedRuleContext(MiniGoParser.InterfacedeclContext,0)


        def func_and_method_decl(self):
            return self.getTypedRuleContext(MiniGoParser.Func_and_method_declContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = MiniGoParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 77
                self.constdecl()
                pass

            elif la_ == 2:
                self.state = 78
                self.vardecl()
                pass

            elif la_ == 3:
                self.state = 79
                self.vardeclassign()
                pass

            elif la_ == 4:
                self.state = 80
                self.structdecl()
                pass

            elif la_ == 5:
                self.state = 81
                self.interfacedecl()
                pass

            elif la_ == 6:
                self.state = 82
                self.func_and_method_decl()
                pass


            self.state = 85
            self.match(MiniGoParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMI(self):
            return self.getToken(MiniGoParser.SEMI, 0)

        def func_and_method_decl(self):
            return self.getTypedRuleContext(MiniGoParser.Func_and_method_declContext,0)


        def structdecl(self):
            return self.getTypedRuleContext(MiniGoParser.StructdeclContext,0)


        def interfacedecl(self):
            return self.getTypedRuleContext(MiniGoParser.InterfacedeclContext,0)


        def if_stmt(self):
            return self.getTypedRuleContext(MiniGoParser.If_stmtContext,0)


        def for_loop(self):
            return self.getTypedRuleContext(MiniGoParser.For_loopContext,0)


        def vardecl(self):
            return self.getTypedRuleContext(MiniGoParser.VardeclContext,0)


        def vardeclassign(self):
            return self.getTypedRuleContext(MiniGoParser.VardeclassignContext,0)


        def constdecl(self):
            return self.getTypedRuleContext(MiniGoParser.ConstdeclContext,0)


        def assignment(self):
            return self.getTypedRuleContext(MiniGoParser.AssignmentContext,0)


        def ret(self):
            return self.getTypedRuleContext(MiniGoParser.RetContext,0)


        def funccall(self):
            return self.getTypedRuleContext(MiniGoParser.FunccallContext,0)


        def methodcall(self):
            return self.getTypedRuleContext(MiniGoParser.MethodcallContext,0)


        def method_var_access(self):
            return self.getTypedRuleContext(MiniGoParser.Method_var_accessContext,0)


        def BREAK(self):
            return self.getToken(MiniGoParser.BREAK, 0)

        def CONTINUE(self):
            return self.getToken(MiniGoParser.CONTINUE, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = MiniGoParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 87
                self.func_and_method_decl()
                pass

            elif la_ == 2:
                self.state = 88
                self.structdecl()
                pass

            elif la_ == 3:
                self.state = 89
                self.interfacedecl()
                pass

            elif la_ == 4:
                self.state = 90
                self.if_stmt()
                pass

            elif la_ == 5:
                self.state = 91
                self.for_loop()
                pass

            elif la_ == 6:
                self.state = 92
                self.vardecl()
                pass

            elif la_ == 7:
                self.state = 93
                self.vardeclassign()
                pass

            elif la_ == 8:
                self.state = 94
                self.constdecl()
                pass

            elif la_ == 9:
                self.state = 95
                self.assignment()
                pass

            elif la_ == 10:
                self.state = 96
                self.ret()
                pass

            elif la_ == 11:
                self.state = 97
                self.funccall()
                pass

            elif la_ == 12:
                self.state = 98
                self.methodcall(0)
                pass

            elif la_ == 13:
                self.state = 99
                self.method_var_access()
                pass

            elif la_ == 14:
                self.state = 100
                self.match(MiniGoParser.BREAK)
                pass

            elif la_ == 15:
                self.state = 101
                self.match(MiniGoParser.CONTINUE)
                pass


            self.state = 104
            self.match(MiniGoParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypedefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ATOMIC_TYPE(self):
            return self.getToken(MiniGoParser.ATOMIC_TYPE, 0)

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def array_type(self):
            return self.getTypedRuleContext(MiniGoParser.Array_typeContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_typedef

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypedef" ):
                return visitor.visitTypedef(self)
            else:
                return visitor.visitChildren(self)




    def typedef(self):

        localctx = MiniGoParser.TypedefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_typedef)
        try:
            self.state = 109
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MiniGoParser.ATOMIC_TYPE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                self.match(MiniGoParser.ATOMIC_TYPE)
                pass
            elif token in [MiniGoParser.ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 107
                self.match(MiniGoParser.ID)
                pass
            elif token in [MiniGoParser.LBRACKET]:
                self.enterOuterAlt(localctx, 3)
                self.state = 108
                self.array_type()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST(self):
            return self.getToken(MiniGoParser.CONST, 0)

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def ASSIGN_INIT(self):
            return self.getToken(MiniGoParser.ASSIGN_INIT, 0)

        def expression(self):
            return self.getTypedRuleContext(MiniGoParser.ExpressionContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_constdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstdecl" ):
                return visitor.visitConstdecl(self)
            else:
                return visitor.visitChildren(self)




    def constdecl(self):

        localctx = MiniGoParser.ConstdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_constdecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(MiniGoParser.CONST)
            self.state = 112
            self.match(MiniGoParser.ID)
            self.state = 113
            self.match(MiniGoParser.ASSIGN_INIT)
            self.state = 114
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MiniGoParser.VAR, 0)

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def typedef(self):
            return self.getTypedRuleContext(MiniGoParser.TypedefContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl" ):
                return visitor.visitVardecl(self)
            else:
                return visitor.visitChildren(self)




    def vardecl(self):

        localctx = MiniGoParser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_vardecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(MiniGoParser.VAR)
            self.state = 117
            self.match(MiniGoParser.ID)
            self.state = 118
            self.typedef()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclassignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MiniGoParser.VAR, 0)

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def typedef(self):
            return self.getTypedRuleContext(MiniGoParser.TypedefContext,0)


        def ASSIGN_INIT(self):
            return self.getToken(MiniGoParser.ASSIGN_INIT, 0)

        def expression(self):
            return self.getTypedRuleContext(MiniGoParser.ExpressionContext,0)


        def array(self):
            return self.getTypedRuleContext(MiniGoParser.ArrayContext,0)


        def structliteral(self):
            return self.getTypedRuleContext(MiniGoParser.StructliteralContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_vardeclassign

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardeclassign" ):
                return visitor.visitVardeclassign(self)
            else:
                return visitor.visitChildren(self)




    def vardeclassign(self):

        localctx = MiniGoParser.VardeclassignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_vardeclassign)
        try:
            self.state = 137
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 120
                self.match(MiniGoParser.VAR)
                self.state = 121
                self.match(MiniGoParser.ID)
                self.state = 122
                self.typedef()
                self.state = 123
                self.match(MiniGoParser.ASSIGN_INIT)
                self.state = 127
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                if la_ == 1:
                    self.state = 124
                    self.expression(0)
                    pass

                elif la_ == 2:
                    self.state = 125
                    self.array()
                    pass

                elif la_ == 3:
                    self.state = 126
                    self.structliteral()
                    pass


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 129
                self.match(MiniGoParser.VAR)
                self.state = 130
                self.match(MiniGoParser.ID)
                self.state = 131
                self.match(MiniGoParser.ASSIGN_INIT)
                self.state = 135
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                if la_ == 1:
                    self.state = 132
                    self.expression(0)
                    pass

                elif la_ == 2:
                    self.state = 133
                    self.array()
                    pass

                elif la_ == 3:
                    self.state = 134
                    self.structliteral()
                    pass


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def array_type(self):
            return self.getTypedRuleContext(MiniGoParser.Array_typeContext,0)


        def array_list(self):
            return self.getTypedRuleContext(MiniGoParser.Array_listContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_array

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray" ):
                return visitor.visitArray(self)
            else:
                return visitor.visitChildren(self)




    def array(self):

        localctx = MiniGoParser.ArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_array)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.array_type()
            self.state = 140
            self.array_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ATOMIC_TYPE(self):
            return self.getToken(MiniGoParser.ATOMIC_TYPE, 0)

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def array_index(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniGoParser.Array_indexContext)
            else:
                return self.getTypedRuleContext(MiniGoParser.Array_indexContext,i)


        def getRuleIndex(self):
            return MiniGoParser.RULE_array_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_type" ):
                return visitor.visitArray_type(self)
            else:
                return visitor.visitChildren(self)




    def array_type(self):

        localctx = MiniGoParser.Array_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_array_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 142
                self.array_index()
                self.state = 145 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MiniGoParser.LBRACKET):
                    break

            self.state = 147
            _la = self._input.LA(1)
            if not(_la==MiniGoParser.ATOMIC_TYPE or _la==MiniGoParser.ID):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_indexContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACKET(self):
            return self.getToken(MiniGoParser.LBRACKET, 0)

        def RBRACKET(self):
            return self.getToken(MiniGoParser.RBRACKET, 0)

        def INTEGER(self):
            return self.getToken(MiniGoParser.INTEGER, 0)

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_array_index

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_index" ):
                return visitor.visitArray_index(self)
            else:
                return visitor.visitChildren(self)




    def array_index(self):

        localctx = MiniGoParser.Array_indexContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_array_index)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.match(MiniGoParser.LBRACKET)
            self.state = 150
            _la = self._input.LA(1)
            if not(_la==MiniGoParser.INTEGER or _la==MiniGoParser.ID):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 151
            self.match(MiniGoParser.RBRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(MiniGoParser.LBRACE, 0)

        def array_mem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniGoParser.Array_memContext)
            else:
                return self.getTypedRuleContext(MiniGoParser.Array_memContext,i)


        def RBRACE(self):
            return self.getToken(MiniGoParser.RBRACE, 0)

        def SEPARATOR(self, i:int=None):
            if i is None:
                return self.getTokens(MiniGoParser.SEPARATOR)
            else:
                return self.getToken(MiniGoParser.SEPARATOR, i)

        def getRuleIndex(self):
            return MiniGoParser.RULE_array_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_list" ):
                return visitor.visitArray_list(self)
            else:
                return visitor.visitChildren(self)




    def array_list(self):

        localctx = MiniGoParser.Array_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_array_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.match(MiniGoParser.LBRACE)
            self.state = 154
            self.array_mem()
            self.state = 159
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MiniGoParser.SEPARATOR:
                self.state = 155
                self.match(MiniGoParser.SEPARATOR)
                self.state = 156
                self.array_mem()
                self.state = 161
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 162
            self.match(MiniGoParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_memContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self):
            return self.getTypedRuleContext(MiniGoParser.LiteralContext,0)

